--- a/scripts/2_EXTRACTING-OCCUPATIONS&ORGANIZATIONS.ipynb
+++ b/scripts/2_EXTRACTING-OCCUPATIONS&ORGANIZATIONS.ipynb
@@ -7573,6 +7573,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 196,
    "metadata": {},
