temporal analysis, some progress

--- a/scripts/5_OCCUPS-TIGHTNESS.ipynb
+++ b/scripts/5_OCCUPS-TIGHTNESS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +309,8 @@
     }
    ],
    "source": [
-    "LIRE = s.read_file(\"SDAM_data/social_diversity/LIRE_occupsorgs_2021-05-27.geojson\", \"gdf\")\n",
-    "LIRE.head(5)"
+    "EDHCS = s.read_file(\"SDAM_data/social_diversity/EDHCS_occupsorgs_2021-05-27.geojson\", \"gdf\")\n",
+    "EDHCS.head(5)"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LIRE_unfiltered = s.read_file(\"SDAM_data/LIRE/LIRE_unfiltered.json\", \"df\")"
+    "EDHCS_unfiltered = s.read_file(\"SDAM_data/EDHCS/EDHCS_unfiltered.json\", \"df\")"
    ]
   },
   {
@@ -346,7 +346,7 @@
     }
    ],
    "source": [
-    "len(LIRE_unfiltered[LIRE_unfiltered[\"province\"]==\"Sicilia\"])"
+    "len(EDHCS_unfiltered[EDHCS_unfiltered[\"province\"]==\"Sicilia\"])"
    ]
   },
   {
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "len(LIRE[LIRE[\"province\"]==\"Sicilia\"])"
+    "len(EDHCS[EDHCS[\"province\"]==\"Sicilia\"])"
    ]
   },
   {
@@ -415,8 +415,8 @@
     }
    ],
    "source": [
-    "LIRE_sicilia = LIRE[LIRE.within(sicilia.unary_union)]\n",
-    "len(LIRE_sicilia)"
+    "EDHCS_sicilia = EDHCS[EDHCS.within(sicilia.unary_union)]\n",
+    "len(EDHCS_sicilia)"
    ]
   },
   {
@@ -448,8 +448,8 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "sicilia.plot(ax=ax, zorder=2)\n",
-    "gplt.kdeplot(LIRE_sicilia, cmap=\"Oranges\", ax=ax, shade=False, zorder=2)\n",
-    "LIRE_sicilia.plot(ax=ax, alpha=0.4, color=\"darkred\", markersize=1, zorder=3)"
+    "gplt.kdeplot(EDHCS_sicilia, cmap=\"Oranges\", ax=ax, shade=False, zorder=2)\n",
+    "EDHCS_sicilia.plot(ax=ax, alpha=0.4, color=\"darkred\", markersize=1, zorder=3)"
    ]
   },
   {
@@ -473,7 +473,7 @@
     }
    ],
    "source": [
-    "print(list(LIRE.columns))"
+    "print(list(EDHCS.columns))"
    ]
   },
   {
@@ -493,7 +493,7 @@
     }
    ],
    "source": [
-    "len(LIRE[LIRE[\"occups_N\"] > 0])"
+    "len(EDHCS[EDHCS[\"occups_N\"] > 0])"
    ]
   },
   {
@@ -1173,7 +1173,7 @@
    "source": [
     "# inscriptions which were produced at the year 165 at the earliest\n",
     "turning_point = 165\n",
-    "len(LIRE[LIRE[\"not_before\"] >= turning_point])"
+    "len(EDHCS[EDHCS[\"not_before\"] >= turning_point])"
    ]
   },
   {
@@ -1197,7 +1197,7 @@
     "cities_occups_data = []\n",
     "for city in cities_latin[\"Ancient Toponym\"].tolist():\n",
     "    city_hanson = cities_hanson[cities_hanson[\"Ancient Toponym\"]==city]\n",
-    "    edhcs_city_df = LIRE[LIRE[\"nearest_city\"]==city]\n",
+    "    edhcs_city_df = EDHCS[EDHCS[\"nearest_city\"]==city]\n",
     "    ins_N = len(edhcs_city_df)\n",
     "    try:\n",
     "        ins_N_turn = len(edhcs_city_df[edhcs_city_df[\"not_before\"] >= turning_point]) / ins_N\n",
