--- a/scripts/3_OCCUPS&ORGS_BY-CONTEXT.ipynb
+++ b/scripts/3_OCCUPS&ORGS_BY-CONTEXT.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "pd.set_option('display.max_columns', 200)\n",
     "import numpy as np\n",
     "import geopandas as gpd\n",
     "import nltk\n",
