occupational network plots!

--- a/scripts/5_TEMPORAL-OCCUPS&ORGS.ipynb
+++ b/scripts/5_TEMPORAL-OCCUPS&ORGS.ipynb
@@ -4351,12 +4351,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your <class 'matplotlib.figure.Figure'> object has been succefully written as \"https://sciencedata.dk/files/SDAM_root/SDAM_data/social_diversity/occups_orgs_bar_periods.png\"\n",
+      "Your <class 'matplotlib.figure.Figure'> object has been succefully written as \"https://sciencedata.dk/files/SDAM_root/SDAM_data/social_diversity/occups_orgs_bar_periods.eps\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "s.write_file(\"SDAM_data/social_diversity/occups_orgs_bar_periods.png\", fig)\n",
+    "s.write_file(\"SDAM_data/social_diversity/occups_orgs_bar_periods.eps\", fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s.write_file(\"SDAM_data/social_diversity/o\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
