specialization looks ready

--- a/scripts/0_URBAN-CONTEXTS.ipynb
+++ b/scripts/0_URBAN-CONTEXTS.ipynb
@@ -274,19 +274,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "889"
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "roman_cities[\"western_province\"].sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.6404899135446686"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roman_cities[\"western_province\"].sum() / len(roman_cities)"
    ],
    "metadata": {
     "collapsed": false,
@@ -333,6 +356,29 @@
    "outputs": [],
    "source": [
     "regions_west_union = pleiades_regions_west.unary_union"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "137305"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(LIRE)"
    ],
    "metadata": {
     "collapsed": false,
