last commit before LIRE v1.2

--- a/scripts/0_URBAN-CONTEXTS.ipynb
+++ b/scripts/0_URBAN-CONTEXTS.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import re\n",
@@ -125,19 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/kasev/Projects/LIRE_ETL/data/large_data/LIREg.parquet']\n"
+      "['/Users/kasev/Projects/LIRE_ETL/data/large_data/LIRE_v1-2.parquet']\n"
      ]
     }
    ],
    "source": [
     "# find local version of the input dataset\n",
-    "local_paths = !find ~/Projects -name \"LIREg.parquet\"\n",
+    "local_paths = !find ~/Projects -name \"LIRE_v1-2.parquet\"\n",
     "print(local_paths)"
    ],
    "metadata": {
