temporal analysis for article draft

--- a/scripts/2_EXTRACTING-OCCUPATIONS&ORGANIZATIONS.ipynb
+++ b/scripts/2_EXTRACTING-OCCUPATIONS&ORGANIZATIONS.ipynb
@@ -407,6 +407,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# exploring faber and Metal-Working"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  occupation  count Harris_Category           Source HISCO_majorgroup  \\\n1      faber    659   Metal-Working  Waltzing - Rome                9   \n\n  Subcategory HISCO_minorgroup  \\\n1         NaN               99   \n\n                                     Translation_eng  \\\n1  a worker in wood, stone, metal, etc., a forger...   \n\n                              HISCO_majorgroup_descr  \n1  Production and related workers, transport equi...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>occupation</th>\n      <th>count</th>\n      <th>Harris_Category</th>\n      <th>Source</th>\n      <th>HISCO_majorgroup</th>\n      <th>Subcategory</th>\n      <th>HISCO_minorgroup</th>\n      <th>Translation_eng</th>\n      <th>HISCO_majorgroup_descr</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>faber</td>\n      <td>659</td>\n      <td>Metal-Working</td>\n      <td>Waltzing - Rome</td>\n      <td>9</td>\n      <td>NaN</td>\n      <td>99</td>\n      <td>a worker in wood, stone, metal, etc., a forger...</td>\n      <td>Production and related workers, transport equi...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "occupations_counts[occupations_counts[\"occupation\"]==\"faber\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1211"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "occupations_counts[occupations_counts[\"Harris_Category\"]==\"Metal-Working\"][\"count\"].sum()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.5441783649876135"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "659 / 1211"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
