--- a/scripts/0_DECLINE-OCCUPATIONS&ORGANIZATIONS.ipynb
+++ b/scripts/0_DECLINE-OCCUPATIONS&ORGANIZATIONS.ipynb
@@ -438,6 +438,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "882"
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(occups_declined)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 148,
    "outputs": [],
    "source": [
