analysis with new data including temporal trends

--- a/scripts/1_URBAN-CONTEXTS.ipynb
+++ b/scripts/1_URBAN-CONTEXTS.ipynb
@@ -711,6 +711,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "3.0901936161855166"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bodel claims that Roman inscriptions are dispersed over an area of about 30 square km. Wh\n",
+    "np.sqrt(30 / np.pi)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "outputs": [],
    "source": [
