--- a/scripts/4_OCCUPS&ORGS_BY-CONTEXT.ipynb
+++ b/scripts/4_OCCUPS&ORGS_BY-CONTEXT.ipynb
@@ -859,7 +859,7 @@
     }
    },
    "source": [
-    "## alternative urban contexts"
+    "##  urban contexts"
    ]
   },
   {
@@ -901,18 +901,6 @@
     "    print(categories, freqs, total_freq)\n",
     "edhcs_all_present_categories = list(set(edhcs_all_present_categories))"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
