--- a/scripts/5_TEMPORAL_LIRE.ipynb
+++ b/scripts/5_TEMPORAL_LIRE.ipynb
@@ -64,10 +64,9 @@
     "def save_figure(fig, fig_name):\n",
     "    #each figure to be saved in four different versions\n",
     "    fig.savefig(\"../figures/\" + fig_name + \".tiff\")\n",
-    "    fig.savefig(\"../figures/\" + fig_name + \".svg\")\n",
     "    fig.savefig(\"../figures/\" + fig_name + \".png\")\n",
-    "    s.write_file(figpath + fig_name + \".eps\", fig)\n",
-    "    s.write_file(figpath + fig_name + \".png\", fig)"
+    "    s.write_file(figpath + fig_name + \".png\", fig)\n",
+    "    s.write_file(figpath + fig_name + \".tiff\", fig)"
    ]
   },
   {
