--- a/scripts/0_ROMAN-CITIES&PROVINCES.ipynb
+++ b/scripts/0_ROMAN-CITIES&PROVINCES.ipynb
@@ -42,9 +42,9 @@
     "plt.rcParams['font.size'] = 8\n",
     "\n",
     "def save_figure(fig, fig_name):\n",
-    "    fig.savefig(\"../figures/\" + fig_name + \".eps\")\n",
+    "    fig.savefig(\"../figures/\" + fig_name + \".tiff\")\n",
     "    fig.savefig(\"../figures/\" + fig_name + \".png\")\n",
-    "    s.write_file(figpath + fig_name + \".eps\", fig)\n",
+    "    s.write_file(figpath + fig_name + \".tiff\", fig)\n",
     "    s.write_file(figpath + fig_name + \".png\", fig)"
    ],
    "metadata": {
