--- a/scripts/8_HISCObyTIME&CONTEXT.ipynb
+++ b/scripts/8_HISCObyTIME&CONTEXT.ipynb
@@ -284,24 +284,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 142,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.28437654016757\n",
-      "4.739984289080911\n",
-      "4.925988225399496\n",
-      "5.362758620689656\n"
+      "4.28\n",
+      "4.74\n",
+      "4.93\n",
+      "5.36\n"
      ]
     }
    ],
    "source": [
-    "print(hisco_large[\"mean\"])\n",
-    "print(hisco_medium[\"mean\"])\n",
-    "print(hisco_small[\"mean\"])\n",
-    "print(hisco_rural[\"mean\"])"
+    "print(np.round(hisco_large[\"mean\"], 2))\n",
+    "print(np.round(hisco_medium[\"mean\"], 2))\n",
+    "print(np.round(hisco_small[\"mean\"], 2))\n",
+    "print(np.round(hisco_rural[\"mean\"], 2))"
    ],
    "metadata": {
     "collapsed": false,
