--- a/scripts/2_INSCRIPTIONS-ON-URBAN-CONTEXTS.ipynb
+++ b/scripts/2_INSCRIPTIONS-ON-URBAN-CONTEXTS.ipynb
@@ -15,16 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kasev/Projects/social_diversity/socdiv_venv/lib/python3.10/site-packages/geopandas/_compat.py:111: UserWarning: The Shapely GEOS version (3.10.2-CAPI-1.16.0) is incompatible with the GEOS version PyGEOS was compiled with (3.10.1-CAPI-1.16.0). Conversions between both will be slow.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import pandas as pd\n",
@@ -35,12 +26,7 @@
     "from scipy.spatial import cKDTree\n",
     "from pyproj import Geod\n",
     "from shapely.geometry import LineString\n",
-    "\n",
-    "import seaborn as sns\n",
-    "import gspread\n",
-    "from gspread_dataframe import get_as_dataframe, set_with_dataframe\n",
-    "from google.oauth2 import service_account # based on google-auth library\n",
-    "import sddk\n"
+    "import seaborn as sns\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -52,32 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "connection with shared folder established with you as its owner\n",
-      "endpoint variable has been configured to: https://sciencedata.dk/files/SDAM_root/\n"
-     ]
-    }
-   ],
-   "source": [
-    "# to access gsheet, you need Google Service Account key json file\n",
-    "# I have mine located in my personal space on sciencedata.dk, so I read it from there:\n",
-    "s = sddk.cloudSession(\"sciencedata.dk\", \"SDAM_root\", \"648597@au.dk\")\n",
-    "figpath = \"SDAM_data/social_diversity/socdiv_figures/\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "outputs": [],
    "source": [
     "# global parameters for plots\n",
@@ -88,26 +48,7 @@
     "\n",
     "def save_figure(fig, fig_name):\n",
     "    fig.savefig(\"../figures/\" + fig_name + \".eps\")\n",
-    "    fig.savefig(\"../figures/\" + fig_name + \".png\")\n",
-    "    s.write_file(figpath + fig_name + \".eps\", fig)\n",
-    "    s.write_file(figpath + fig_name + \".png\", fig)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "file_data = s.read_file(\"https://sciencedata.dk/files/ServiceAccountsKey.json\", \"dict\")\n",
-    "credentials = service_account.Credentials.from_service_account_info(file_data)\n",
-    "gc = gspread.Client(auth=credentials.with_scopes(['https://spreadsheets.google.com/feeds', 'https://www.googleapis.com/auth/drive']))\n",
-    "socdiv_results = gc.open_by_url(\"https://docs.google.com/spreadsheets/d/1kACGBS9Xdno7FL2fPZ-vCOu4SSh9uUaZmGvnEghVs_A/edit?usp=sharing\")"
+    "    fig.savefig(\"../figures/\" + fig_name + \".png\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -130,20 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/kasev/Projects/LIRE_ETL/data/large_data/LIRE_v1-2.parquet']\n"
+      "/Users/kasev//Projects/LIRE_ETL/data/large_data/LIRE_v1-2.parquet\n"
      ]
     }
    ],
    "source": [
     "# find local version of the input dataset\n",
-    "local_paths = !find ~/Projects -name \"LIRE_v1-2.parquet\"\n",
-    "print(local_paths)"
+    "local_paths = !find ~/ -name \"LIRE_v1-2.parquet\"\n",
+    "print(local_paths[0])"
    ],
    "metadata": {
     "collapsed": false,
@@ -154,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -172,9 +113,9 @@
     "except:# !!! use carefully - takes time\n",
     "    q = input(\"local file not found, try another put, or input 'y' for download\")\n",
     "    if q == \"y\":\n",
-    "        LIRE = gpd.read_file(\"https://zenodo.org/record/5074774/files/LIREg.geojson?download=1\", driver=\"geoJSON\")\n",
+    "        LIRE = gpd.read_file(\"https://zenodo.org/record/5776109/files/LIRE_v1-2.geojson?download=1\")\n",
     "        print(\"file downloaded from zenodo\")\n",
-    "        LIRE.to_parquet(\"../data/large_data/LIREg.parquet\")"
+    "        LIRE.to_parquet(\"../data/large_data/LIRE_v1.2.parquet\")"
    ],
    "metadata": {
     "collapsed": false,
